--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <div class="wrapper">
   <p class="flotte">
   <a href="#" class="images">
-    <img src="/images/Sans titre (2).png" alt="">
+    <img src="./images/Sans titre (2).png" alt="">
   </a>
 </p>
   <section>
@@ -40,10 +40,10 @@ Je suis une passionée de videos games, d'art (les deux en compléments pour m'i
   <br>
 <h3>MES PETITS PROJETS</h3>
 <a href="#" class="images">
-  <img src="/images/2020-11-21 (15).png" alt="">
+  <img src="./images/2020-11-21 (15).png" alt="">
 </a>
 <a href="#" class="images">
-  <img src="/images/SEND.png" alt="">
+  <img src="./images/SEND.png" alt="">
 </a>
 </section>
 </body>
