--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@ Je suis une passionée de videos games, d'art (les deux en compléments pour m'i
   <h3>COMPETENCES</h3>
   <li class="wrapper">Outlook, Excel, Word<br>
   HTML, CSS, Framework<br>
-  Fait preuve d'une grand motivation personnelle<br>
+  Fais preuve d'une grande motivation personnelle<br>
   Mise en oeuvre des processus<br>
-  Attention particulière portée aux détails</li>
+  Attentions particulières portée aux détails</li>
   <br>
 <h3>MES PETITS PROJETS</h3>
 <a href="#" class="images">
